--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
 
         <div class="button-container">
-            <a href="D:\MY WEBSITE\second page.html">See Results</a>
+            <a href="D:\MY WEBSITE\second.html">See Results</a>
         </div>
     </main>
 
