--- a/index.html
+++ b/index.html
@@ -209,22 +209,22 @@
             <h2>About Us</h2>
             <div class="team">
                 <div class="member">
-                    <img src="D:\MY WEBSITE\images\WhatsApp Image 2024-06-02 at 9.01.50 PM.jpeg" alt="Sudhanva">
+                    <img src="WhatsApp Image 2024-06-02 at 9.01.50 PM.jpeg" alt="Sudhanva">
                     <p>Sudhanva Ballary</p>
                     <p>Web Devlopper & Web Designing</p>
                 </div>
                 <div class="member">
-                    <img src="D:\MY WEBSITE\images\WhatsApp Image 2024-06-02 at 9.13.09 PM.jpeg" alt="Sanjeev">
+                    <img src="WhatsApp Image 2024-06-02 at 9.13.09 PM.jpeg" alt="Sanjeev">
                     <p>Sanjeev Nadgir</p>
                     <p>Founder & Manager</p>
                 </div>
                 <div class="member">
-                    <img src="D:\MY WEBSITE\images\WhatsApp Image 2024-06-02 at 9.01.05 PM.jpeg" alt="Suman">
+                    <img src="WhatsApp Image 2024-06-02 at 9.01.05 PM.jpeg" alt="Suman">
                     <p>Suman Kaladagi</p>
                     <p>Data Analyser</p>
                 </div>
                 <div class="member">
-                    <img src="D:\MY WEBSITE\images\WhatsApp Image 2024-06-02 at 9.17.56 PM.jpeg" alt="Ankitha">
+                    <img src="WhatsApp Image 2024-06-02 at 9.17.56 PM.jpeg" alt="Ankitha">
                     <p>Ankitha Lakkolli</p>
                     <p>Data Analyser</p>
                 </div>
