--- a/second.html
+++ b/second.html
@@ -223,113 +223,131 @@
     <script>
         const electionResults = {
             "Andhra Pradesh": [
-                { constituency: "Araku", winningParty: "YSRCP" },
-                { constituency: "Srikakulam", winningParty: "YSRCP" }
+                { constituency: "Araku", winningParty: "YSRCP", candidate: "Ramesh Chandra" },
+                { constituency: "Srikakulam", winningParty: "YSRCP", candidate: "Harsha Kumar" },
+                { constituency: "Vishakapatnam", winningParty: "YSRCP", candidate: "Venkat Raman" }
             ],
             "Arunachal Pradesh": [
-                { constituency: "Arunachal West", winningParty: "BJP" },
-                { constituency: "Arunachal East", winningParty: "BJP" }
+                { constituency: "Arunachal West", winningParty: "BJP", candidate: "Kiren Rijiju" },
+                { constituency: "Arunachal East", winningParty: "BJP", candidate: "Tapir Gao" }
             ],
             "Assam": [
-                { constituency: "Dibrugarh", winningParty: "BJP" },
-                { constituency: "Kaliabor", winningParty: "INC" }
+                { constituency: "Dibrugarh", winningParty: "BJP", candidate: "Rameswar Teli" },
+                { constituency: "Guwahati", winningParty: "BJP", candidate: "Queen Ojha" },
+                { constituency: "Nagaon", winningParty: "BJP", candidate: "Pradyut Bordoloi" }
             ],
             "Bihar": [
-                { constituency: "Arrah", winningParty: "BJP" },
-                { constituency: "Aurangabad", winningParty: "BJP" }
+                { constituency: "Patna Sahib", winningParty: "BJP", candidate: "Ravi Shankar Prasad" },
+                { constituency: "Nalanda", winningParty: "JD(U)", candidate: "Kaushalendra Kumar" },
+                { constituency: "Gaya", winningParty: "BJP", candidate: "Vijay Manjhi" }
             ],
             "Chhattisgarh": [
-                { constituency: "Bastar", winningParty: "INC" },
-                { constituency: "Bilaspur", winningParty: "BJP" }
+                { constituency: "Raipur", winningParty: "BJP", candidate: "Sunil Soni" },
+                { constituency: "Bilaspur", winningParty: "BJP", candidate: "Arun Sao" },
+                { constituency: "Durg", winningParty: "INC", candidate: "Pratima Chandrakar" }
             ],
             "Goa": [
-                { constituency: "North Goa", winningParty: "BJP" },
-                { constituency: "South Goa", winningParty: "INC" }
+                { constituency: "North Goa", winningParty: "BJP", candidate: "Shripad Naik" },
+                { constituency: "South Goa", winningParty: "INC", candidate: "Francisco Sardinha" }
             ],
             "Gujarat": [
-                { constituency: "Ahmedabad East", winningParty: "BJP" },
-                { constituency: "Ahmedabad West", winningParty: "BJP" }
+                { constituency: "Ahmedabad East", winningParty: "BJP", candidate: "Hasmukh Patel" },
+                { constituency: "Surat", winningParty: "BJP", candidate: "Darshana Jardosh" },
+                { constituency: "Vadodara", winningParty: "BJP", candidate: "Ranjanben Bhatt" }
             ],
             "Haryana": [
-                { constituency: "Ambala", winningParty: "BJP" },
-                { constituency: "Bhiwani-Mahendragarh", winningParty: "BJP" }
+                { constituency: "Gurgaon", winningParty: "BJP", candidate: "Rao Inderjit Singh" },
+                { constituency: "Faridabad", winningParty: "BJP", candidate: "Krishan Pal" },
+                { constituency: "Rohtak", winningParty: "INC", candidate: "Deepender Singh Hooda" }
             ],
             "Himachal Pradesh": [
-                { constituency: "Hamirpur", winningParty: "BJP" },
-                { constituency: "Kangra", winningParty: "BJP" }
+                { constituency: "Kangra", winningParty: "BJP", candidate: "Kishan Kapoor" },
+                { constituency: "Mandi", winningParty: "BJP", candidate: "Ram Swaroop Sharma" }
             ],
             "Jharkhand": [
-                { constituency: "Chatra", winningParty: "BJP" },
-                { constituency: "Dhanbad", winningParty: "BJP" }
+                { constituency: "Ranchi", winningParty: "BJP", candidate: "Sanjay Seth" },
+                { constituency: "Jamshedpur", winningParty: "BJP", candidate: "Bidyut Baran Mahato" },
+                { constituency: "Dhanbad", winningParty: "BJP", candidate: "Pashupati Nath Singh" }
             ],
             "Karnataka": [
-                { constituency: "Bagalkot", winningParty: "BJP" },
-                { constituency: "Bangalore Central", winningParty: "BJP" }
+                { constituency: "Bangalore South", winningParty: "BJP", candidate: "Tejasvi Surya" },
+                { constituency: "Mysore", winningParty: "BJP", candidate: "Pratap Simha" },
+                { constituency: "Dharwad", winningParty: "BJP", candidate: "Pralhad Joshi" }
             ],
             "Kerala": [
-                { constituency: "Alappuzha", winningParty: "INC" },
-                { constituency: "Ernakulam", winningParty: "INC" }
+                { constituency: "Thiruvananthapuram", winningParty: "INC", candidate: "Shashi Tharoor" },
+                { constituency: "Alappuzha", winningParty: "INC", candidate: "Shanimol Usman" },
+                { constituency: "Palakkad", winningParty: "CPI(M)", candidate: "MB Rajesh" }
             ],
             "Madhya Pradesh": [
-                { constituency: "Balaghat", winningParty: "BJP" },
-                { constituency: "Betul", winningParty: "BJP" }
+                { constituency: "Bhopal", winningParty: "BJP", candidate: "Pragya Singh Thakur" },
+                { constituency: "Indore", winningParty: "BJP", candidate: "Shankar Lalwani" },
+                { constituency: "Gwalior", winningParty: "BJP", candidate: "Vivek Shejwalkar" }
             ],
             "Maharashtra": [
-                { constituency: "Ahmednagar", winningParty: "BJP" },
-                { constituency: "Akola", winningParty: "BJP" }
+                { constituency: "Mumbai South", winningParty: "Shiv Sena", candidate: "Arvind Sawant" },
+                { constituency: "Nagpur", winningParty: "BJP", candidate: "Nitin Gadkari" },
+                { constituency: "Pune", winningParty: "BJP", candidate: "Girish Bapat" }
             ],
             "Manipur": [
-                { constituency: "Inner Manipur", winningParty: "INC" },
-                { constituency: "Outer Manipur", winningParty: "Naga People's Front" }
+                { constituency: "Inner Manipur", winningParty: "INC", candidate: "Dr. R.K. Ranjan Singh" },
+                { constituency: "Outer Manipur", winningParty: "BJP", candidate: "Lorho S. Pfoze" }
             ],
             "Meghalaya": [
-                { constituency: "Shillong", winningParty: "INC" },
-                { constituency: "Tura", winningParty: "NPP" }
+                { constituency: "Shillong", winningParty: "INC", candidate: "Vincent H. Pala" },
+                { constituency: "Tura", winningParty: "NPP", candidate: "Agatha Sangma" }
             ],
             "Mizoram": [
-                { constituency: "Mizoram", winningParty: "INC" }
+                { constituency: "Mizoram", winningParty: "MNF", candidate: "C. Lalrosanga" }
             ],
             "Nagaland": [
-                { constituency: "Nagaland", winningParty: "NDPP" }
+                { constituency: "Nagaland", winningParty: "NDPP", candidate: "Tokheho Yepthomi" }
             ],
             "Odisha": [
-                { constituency: "Aska", winningParty: "BJD" },
-                { constituency: "Balasore", winningParty: "BJD" }
+                { constituency: "Bhubaneswar", winningParty: "BJP", candidate: "Aparajita Sarangi" },
+                { constituency: "Cuttack", winningParty: "BJD", candidate: "Bhartruhari Mahtab" },
+                { constituency: "Puri", winningParty: "BJP", candidate: "Sambit Patra" }
             ],
             "Punjab": [
-                { constituency: "Amritsar", winningParty: "INC" },
-                { constituency: "Anandpur Sahib", winningParty: "INC" }
+                { constituency: "Amritsar", winningParty: "INC", candidate: "Gurjit Singh Aujla" },
+                { constituency: "Ludhiana", winningParty: "INC", candidate: "Ravneet Singh Bittu" },
+                { constituency: "Patiala", winningParty: "INC", candidate: "Preneet Kaur" }
             ],
             "Rajasthan": [
-                { constituency: "Ajmer", winningParty: "BJP" },
-                { constituency: "Alwar", winningParty: "BJP" }
+                { constituency: "Jaipur", winningParty: "BJP", candidate: "Ramcharan Bohra" },
+                { constituency: "Jodhpur", winningParty: "BJP", candidate: "Gajendra Singh Shekhawat" },
+                { constituency: "Udaipur", winningParty: "BJP", candidate: "Arjunlal Meena" }
             ],
             "Sikkim": [
-                { constituency: "Sikkim", winningParty: "SDF" }
+                { constituency: "Sikkim", winningParty: "SKM", candidate: "Indra Hang Subba" }
             ],
             "Tamil Nadu": [
-                { constituency: "Arakkonam", winningParty: "DMK" },
-                { constituency: "Chennai Central", winningParty: "DMK" }
+                { constituency: "Chennai Central", winningParty: "DMK", candidate: "Dayanidhi Maran" },
+                { constituency: "Coimbatore", winningParty: "CPI(M)", candidate: "P.R. Natarajan" },
+                { constituency: "Madurai", winningParty: "DMK", candidate: "S. Venkatesan" }
             ],
             "Telangana": [
-                { constituency: "Adilabad", winningParty: "TRS" },
-                { constituency: "Bhongir", winningParty: "TRS" }
+                { constituency: "Hyderabad", winningParty: "AIMIM", candidate: "Asaduddin Owaisi" },
+                { constituency: "Karimnagar", winningParty: "BJP", candidate: "Bandi Sanjay Kumar" },
+                { constituency: "Nizamabad", winningParty: "TRS", candidate: "Kavitha Kalvakuntla" }
             ],
             "Tripura": [
-                { constituency: "Tripura West", winningParty: "BJP" },
-                { constituency: "Tripura East", winningParty: "BJP" }
+                { constituency: "Tripura West", winningParty: "BJP", candidate: "Pratima Bhowmik" },
+                { constituency: "Tripura East", winningParty: "BJP", candidate: "Rebati Tripura" }
             ],
             "Uttar Pradesh": [
-                { constituency: "Agra", winningParty: "BJP" },
-                { constituency: "Aligarh", winningParty: "BJP" }
+                { constituency: "Agra", winningParty: "BJP", candidate: "Satish Gautam" },
+                { constituency: "Aligarh", winningParty: "BJP", candidate: "Rajveer Singh" },
+                { constituency: "Amethi", winningParty: "BJP", candidate: "Smriti Irani" }
             ],
             "Uttarakhand": [
-                { constituency: "Almora", winningParty: "BJP" },
-                { constituency: "Garhwal", winningParty: "BJP" }
+                { constituency: "Haridwar", winningParty: "BJP", candidate: "Ramesh Pokhriyal" },
+                { constituency: "Nainital-Udhamsingh Nagar", winningParty: "BJP", candidate: "Ajay Bhatt" }
             ],
             "West Bengal": [
-                { constituency: "Alipurduars", winningParty: "BJP" },
-                { constituency: "Arambagh", winningParty: "AITC" }
+                { constituency: "Alipurduars", winningParty: "BJP", candidate: "John Barla" },
+                { constituency: "Arambagh", winningParty: "AITC", candidate: "Aparupa Poddar" },
+                { constituency: "Asansol", winningParty: "BJP", candidate: "Babul Supriyo" }
             ]
         };
 
@@ -356,7 +374,7 @@
             paginatedResults.forEach(result => {
                 const resultDiv = document.createElement('div');
                 resultDiv.className = 'constituency';
-                resultDiv.innerHTML = `<span>${result.constituency}:</span> <span>${result.winningParty}</span>`;
+                resultDiv.innerHTML = `<span>${result.constituency}:</span> <span>${result.winningParty}</span> <span>${result.candidate}</span>`;
                 resultDiv.onclick = () => showDetails(result);
                 resultsDiv.appendChild(resultDiv);
             });
@@ -385,7 +403,7 @@
         function showDetails(result) {
             const modal = document.getElementById('myModal');
             const modalBody = document.getElementById('modalBody');
-            modalBody.innerHTML = `<p><strong>Constituency:</strong> ${result.constituency}</p><p><strong>Winning Party:</strong> ${result.winningParty}</p>`;
+            modalBody.innerHTML = `<p><strong>Constituency:</strong> ${result.constituency}</p><p><strong>Winning Party:</strong> ${result.winningParty}</p><p><strong>Candidate:</strong> ${result.candidate}</p>`;
             modal.style.display = "block";
         }
 
